// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuditorNameDisplay/> renders the agency name and phone correctly for modrator 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "gap": ".3rem",
        "justifyContent": "flex-start",
      }
    }
  >
    <b>
      GAIKI
    </b>
      (
    <a
      href="tel: 1234567898"
    >
       
      1234567898
    </a>
    ) 
  </div>
</div>
`;

exports[`<AuditorNameDisplay/> renders the auditor name and phone correctly for modrator 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "gap": ".3rem",
        "justifyContent": "flex-start",
      }
    }
  >
    <b>
      Raghava Sowrya
    </b>
      (
    <a
      href="tel: 8123450516"
    >
       
      8123450516
    </a>
    ) 
  </div>
</div>
`;
